# DNF-Resto-Ice

./: #CANNIBAL.sh  #DUKE-ED.bat  #DUKE-ED.sh  #FULLBUILD.bat  #FULLBUILD.sh  #REBUILD_CMAKE.bat  #REBUILD_CMAKE.sh  #REBUILD_SRC.bat  #REBUILD_SRC.sh  #REBUILD_USCRIPT.bat  #REBUILD_USCRIPT.sh  #RUN_GAME.bat  #RUN_GAME.sh  #RUN_GAME_DEBUG.bat  #RUN_GAME_DEBUG.sh  #RUN_GAME_DEDICATE.bat  #RUN_GAME_DEDICATE.sh  .gitattributes  .gitignore  README.md
Stable/: CMakeLists.txt  Duke4.opt
Stable/Cannibal/: CMakeLists.txt  Cannibal.dsp  CpjLod.cpp  CpjMain.cpp  MacEdit.cpp  StrMain.cpp  WinCtrl.cpp
Stable/Cannibal/Res/: MacEdit.rc
Stable/CannibalEditor/: CMakeLists.txt  CannibalEditor.dsp  cbl_defs.h  file_imp.cpp  file_imp.h  ovl_mdl.cpp  ovl_mdl.h  sys_main.cpp  vid_main.cpp
Stable/CannibalEditor/Res/: CannibalEditor.rc
Stable/CannibalEditor/vidglide/: CMakeLists.txt  vid_main.cpp  vidglide.h  vidtex.cpp
Stable/CblMacEd/: CMakeLists.txt
Stable/Core/Classes/: Object.uc
Stable/Core/Inc/: Core.h  UnClass.h  UnFile.h  UnGnuG.h  UnMath.h  UnObjBas.h  UnTemplate.h  UnVcWin32.h  afxres.h  bink_includes.h  dx_includes.h  xtypes.h
Stable/Core/Src/: CMakeLists.txt  DnExec.cpp  UnAnsi.cpp  UnClass.cpp  UnCorSc.cpp  UnMisc.cpp  UnObj.cpp  UnVcWin32.cpp
Stable/D3D9Drv/Src/: CMakeLists.txt  Direct3D9.cpp
Stable/D3DDrv/Src/: CMakeLists.txt  Direct3D8.cpp
Stable/DukeEd/: CMakeLists.txt  DukeEd.dsp
Stable/DukeEd/Inc/: BottomBar.h  BrowserActor.h  BrowserMaster.h  BrowserMesh.h  BrowserSound.h  BrowserTexture.h
Stable/DukeEd/Src/: Main.cpp
Stable/Editor/Inc/: EditorClasses.h
Stable/Editor/Src/: CMakeLists.txt  UnEdExp.cpp  UnEdFact.cpp  UnScrCom.cpp  UnVisi.cpp
Stable/Engine/Classes/: Actor.uc  Ammo.uc  Canvas.uc  Console.uc  DukeVoice.uc  GameInfo.uc  Inventory.uc  Item.uc  Object.uc  Pawn.uc  PlayerPawn.uc  SpecialEvent.uc  Teleporter.uc  VoicePack.uc  Weapon.uc
Stable/Engine/Inc/: EngineClasses.h  UnEngineWin.h  UnRender.h
Stable/Engine/Src/: CMakeLists.txt  DnCinematic.cpp  DnTextureCanvas.cpp  Engine.cpp  Engine.dsp  Rope.cpp  UnAudio.cpp  UnEngine.cpp  UnGame.cpp  UnIn.cpp  UnLevAct.cpp  UnLevTic.cpp  UnPawn.cpp  UnScript.cpp
Stable/Fire/Src/: CMakeLists.txt
Stable/Galaxy/Src/: CMakeLists.txt
Stable/GalaxyLib/: CMakeLists.txt  Glx-mpa.c  Mmx.asm  Sbs.asm
Stable/GlideDrv/Src/: CMakeLists.txt
Stable/Imp3DS/: CMakeLists.txt
Stable/ImpBP2/: CMakeLists.txt
Stable/ImpC3S/: CMakeLists.txt  ImpC3S.cpp
Stable/ImpGMA/: CMakeLists.txt
Stable/ImpLWO/: CMakeLists.txt
Stable/ImpMDX/: CMakeLists.txt  ImpMDX.cpp  ImpMDX.dsp
Stable/ImpMDX/Res/: ImpMDX.rc
Stable/ImpRaziel/: CMakeLists.txt  ImpRaziel.cpp
Stable/IpDrv/: CMakeLists.txt
Stable/IpServer/: CMakeLists.txt
Stable/Launch/: CMakeLists.txt  Launch.cpp  Launch.dsp
Stable/Launch/Res/: LaunchRes.rc
Stable/MeshEd/: CMakeLists.txt  MeshEd.dsp  meshapp.cpp  stdtool.h  sys_main.cpp
Stable/MeshEd/Res/: MeshEd.rc
Stable/MeshEd/vidd3d/: CMakeLists.txt  tex.cpp
Stable/Meshes/: c_dnWeapon.dmx
Stable/OpenGLDrv/Inc/: OpenGL.h
Stable/OpenGLDrv/Src/: CMakeLists.txt  OpenGL.cpp
Stable/Render/: CMakeLists.txt
Stable/Render/Src/: UnLight.cpp  UnRender.cpp
Stable/SoftDrv/Src/: CMakeLists.txt  DrawPoly.cpp  SoftDrvPrivate.h
Stable/Sounds/: a_doors.dfx
Stable/System/: D3D9Drv.int  D3D9Drv.txt  D3DDrv.int  DukeEd.ini  DukeEd_Backup.ini  LevelMessages.int  OpenGLDrv.int  SoftDrv.int  Startup.int  default.ini  dxvk.conf  multiplayer.mds  themes.mds
Stable/Textures/: mtheme_cobaltblue.Dtx
Stable/UBrowser/Src/: CMakeLists.txt
Stable/UCC/Src/: CMakeLists.txt  UCC.cpp
Stable/UWeb/Src/: CMakeLists.txt
Stable/UWindow/Classes/: UWindowFramedWindow.uc  UWindowLookAndFeel.uc  UWindowRootWindow.uc  UWindowWindow.uc  WindowConsole.uc
Stable/UWindow/Src/: CMakeLists.txt
Stable/U_Generic/Classes/: G_Toilet.uc  dnDecal_Generic.uc
Stable/U_Zone3_Canyon/Classes/: dnCanyonHoverCopter.uc
Stable/WinDrv/: CMakeLists.txt
Stable/WinDrv/Inc/: WinDrv.h
Stable/WinDrv/Src/: WinViewport.cpp
Stable/Window/: CMakeLists.txt
Stable/Window/Inc/: Window.h
Stable/dnAI/: CMakeLists.txt
Stable/dnAI/Classes/: AIClimbControl.uc  AIPawn.uc  CoverSpot.uc  EDFShield.uc  Grunt.uc  HumanNPC.uc  PigCop.uc  Snatcher.uc
Stable/dnAI/inc/: dnAI.h  dnAIClasses.h
Stable/dnAI/src/: CMakeLists.txt  dnAI.cpp  dnAIGrunt.cpp  dnAIGrunt_script.cpp  dnAIHumanNPC.cpp  dnAIHumanNPC_script.cpp  dnAIMain.cpp  dnAIPawn.cpp  dnAIPigCop.cpp  dnCoverSpot.cpp  dnNavMesh.cpp
Stable/dnGame/: CMakeLists.txt
Stable/dnGame/Classes/: BUG_M16_Player.uc  DukeHUD.uc  DukePlayer.uc  EDF_Captain_Player.uc  EDF_Flamer_Player.uc  EDF_Freezer_Player.uc  EDF_Grunt_Player.uc  EDF_M16_Player.uc  EDF_Sapper_Player.uc  EDF_Sniper_Player.uc  EDF_Soldier_Player.uc  EZVendMachine.uc  Flamethrower.uc  Freezer.uc  HUDIndexItem_Freezer.uc  HUDIndexItem_FreezerAlt.uc  InputDecoration.uc  M16.uc  MalePlayerSounds.uc  MeleeWeapon.uc  MountableDecoration.uc  MultiBomb.uc  MultiBombAmmo.uc  NewLocationTrigger.uc  ObjectiveTrigger.uc  PipeBomb.uc  Pistol.uc  PowerCell.uc  RPG.uc  RiotShield.uc  SOSTrigger.uc  Shotgun.uc  SlotMachineBank.uc  SniperRifle.uc  TriggerVideoPoker2.uc  TripMine.uc  TripMineAmmo.uc  dnDeathmatchGame.uc  dnDeathmatchGameHUD.uc  dnDeathmatchGameScoreboard.uc  (+7 more)
Stable/dnGame/inc/: dnGameClasses.h
Stable/dnGame/src/: CMakeLists.txt  dnGame.cpp  dnM16.cpp  dnPistol.cpp  dnShotgun.cpp  dnSinglePlayer.cpp  dnWeapon.cpp
Stable/dnMountables/Classes/: M_Hair.uc
Stable/dnParticles/Classes/: BulletHole_Fabric.uc  dnDebris_WaterFountain.uc  dnRobotGibFX_MachineChunks.uc  (+3 more)
Stable/dnWindow/: CMakeLists.txt
Stable/maps/: !!PigCopAI.dnf  !Z1L5_2a.dnf  !Z1L5_2b.dnf  !Z1L5_4.dnf  !Z1L5_5.dnf  !Z1l5_3.dnf  !z1l1_2.dnf  !z1l1_2_MUSICPATCH.dnf  !z1l1_3_MUSICPATCH.dnf  !z1l1_4.dnf  !z1l1_5.dnf  !z1l2_1a.dnf  !z1l2_4.dnf  !z1l2_5.dnf  !z1l3_1.dnf  !z1l4_1.dnf  !z1l4_2.dnf  !z1l4_3.dnf  !z1l4_4.dnf  Autoplay.dnf  Entry.dnf
Stable/xcore/: CMakeLists.txt  stuff.cpp  winmem.cpp  xclass.h  xcore.def
Stable/ximage/: CMakeLists.txt
(+29 files in other folders)
